--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Call Integrado 1.2</title>
+  <title>One-to-One Call 1.3</title>
   <link rel="stylesheet" href="https://unpkg.com/@phosphor-icons/web" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
   <style>
@@ -282,11 +282,23 @@ function updateAvatarsDisplay() {
   // Video grande: mostrar avatar solo si cámara remota apagada y no se comparte pantalla (ni local ni remoto)
   let showMainAvatar = false;
   if (!isScreenSharing && !remoteIsScreenSharing) {
-    // Buscar si hay un track de video remoto y si está enabled
+    // Buscar si hay un track de video remoto y si está enabled o muted
     const remoteVideoTrack = remoteTracks.find(t => t.kind === 'video');
-    if (!remoteVideoTrack || (typeof remoteVideoTrack.enabled !== 'undefined' && !remoteVideoTrack.enabled)) showMainAvatar = true;
+    if (!remoteVideoTrack || (typeof remoteVideoTrack.enabled !== 'undefined' && !remoteVideoTrack.enabled) || remoteVideoTrack.muted) showMainAvatar = true;
   }
   if (mainAvatar) mainAvatar.style.display = showMainAvatar ? "flex" : "none";
+
+  // Controlar el audio del mainVideo según el estado del track de audio remoto
+  const remoteAudioTrack = remoteTracks.find(t => t.kind === 'audio');
+  if (mainVideo) {
+    if (remoteAudioTrack && (remoteAudioTrack.enabled === false || remoteAudioTrack.muted)) {
+      mainVideo.muted = true;
+      mainVideo.volume = 0;
+    } else {
+      mainVideo.muted = false;
+      mainVideo.volume = 1;
+    }
+  }
 }
 
 function setMainVideoToScreenWithRemoteAudio() {
@@ -457,6 +469,7 @@ document.querySelector('.toggle-mic').addEventListener('click', function() {
   if (!localStream) return;
   const audio = localStream.getAudioTracks()[0];
   if (audio) audio.enabled = !audio.enabled;
+  updateAvatarsDisplay();
 });
 
 document.querySelector('.end-call').onclick = () => {
